# fastapi

./: .gitignore  Dockerfile  auth.py  f.py  file.py  main.py  property.py  pyproject.toml  qo.py
db/: 0_dsds.sql  database.py  movies.db
garbage/: auth.py  main.py  pydantic_Red.py  test1.py
src/: database.py  main.py  movies_test.db
src/api/: __init__.py  dependencies.py  movies.py
src/models/: movies.py
src/schemas/: movies.py
tests/: test_api.py
